* Report Post feature added - ADDED
* Map filter should not cover copyright text - FIXED
* GD > Recently Viewed is not working priperly on SG Cached site - FIXED
* GD > Single Tabs does not scrolls to tab content - FIXED
* GD > Listings AJAX pagination don't loads Kadence blocks CSS - FIXED
* Default category conditional field is not triggered on main category changed - FIXED

= 2.1.1.11 =
* Date range is not working in date field - FIXED
* Elementor Pro theme builder doesn't show GD layout types - FIXED

= 2.1.1.10 =
* OpenStreetMap don't populates region for Sweden - FIXED
* Avada builder not working for search page - FIXED
* Lazyload images don't work in elementor popup - FIXED
* GD show/hide widget option not working on Widget Block - FIXED

= 2.1.1.9 =
* GD > Badge is not showing default category link - FIXED
* Use category image title & caption on fallback image title & caption - CHANGED
* Preview option added to attachments icon to show attachment preview - ADDED
* GD > Dynamic Content is not working properly with block editor - FIXED
* GD > Post Address add option add link to show address on map - ADDED
* Prevent nested carousel in GD Listings - FIXED
* Option added to make a post address private - ADDED
* Schema issue for review - FIXED
* GD Simple Archive Item block added (not yet default) - ADDED
* Several blocks have more design options added - ADDED

= 2.1.1.8 =
* Super Duper v2 causing some issues with builders that use widgets, rolled back to SDv1 to resolve - FIXED

= 2.1.1.7 =
* Backend image editing broken due to error in minified JS file - FIXED
* Output location block does not have default value set, meaning value must be changed to work initially - FIXED
* Elementor Pro can cause fatal error with Super Duper v2 if widget called the v1 way - FIXED

= 2.1.1.5 =
* Multiselect custom field checkbox type shows wrong color for required astrik - FIXED
* Dynamic condition shortcode not working for a new field - FIXED